application/static/css/main.css
html, body {
    font-family: Arial, Helvetica, sans-serif;
    min-height: 100vh;
    max-width: 100%;
    padding: 0;
    margin: 0;
    overflow-y: auto;
    overflow-x: hidden;
}

.error-message {
    color: red;
}

.mainContent {
    min-height: 85vh;
    background-color: #efefe5;
}

/* Utils */
.space-x-3 {
    margin-left: 0.75rem;
    margin-right: 0.75rem;
}

.space-y-3 {
    margin-top: 0.75rem;
    margin-bottom: 0.75rem;
}

.space-x-6 {
    margin-left: 1.5rem;
    margin-right: 1.5rem;
}

.space-x-12 {
    margin-left: 3rem;
    margin-right: 3rem;
}

.w-full {
    width: 100% !important;
}

.min-w-full {
    min-width: 100% !important;
}

.max-w-full {
    max-width: 100% !important;
}

.h-full {
    height: 100%;
}

/* Navbar items */
.brandIcon {
    max-height: 40% !important;
}

.profileIcon {
    max-height: 100% !important;
}

.navbar-item.is-tab {
    min-height: 2px;
    border-bottom-width: 2px;
}

.active {
    color: #ffa500 !important;
}

.active:hover, .active:focus {
    border-bottom-color: #ffa500 !important;
}

.unactive:hover, .unactive:focus {
    border-bottom-color: #000000 !important;
}

.breadcrumb ol, .breadcrumb ul {
    align-items: center;
}

.breadcrumb li+li::before {
    color: #1E3050;
}

.navbar-burger span {
    width: 1.5rem;
    height: 0.125rem;
}

/* Footer */
.footer {
    padding: 2rem 1.5rem 2rem;
}

